[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "whisperbox"
version = "0.1.0"
description = "Local video transcription powered by Whisper AI"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Peter Souza", email = "peterleite.dev@gmail.com"}
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["whisper", "transcription", "video", "audio", "speech-to-text", "ai"]

dependencies = [
    "faster-whisper>=1.0.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
    "ffmpeg-python>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
whisperbox = "whisperbox.cli:app"

[project.urls]
Homepage = "https://github.com/PeterTechDev/whisperbox"
Repository = "https://github.com/PeterTechDev/whisperbox"
Issues = "https://github.com/PeterTechDev/whisperbox/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]
